--- a/.env
+++ b/.env
@@ -3,4 +3,6 @@ KINDE_CLIENT_SECRET=G1jmWoCQQqpoMnkUO305XOSIb5vO1tuZP3fhXFCk4HG1GtAQtA7Pa
 KINDE_ISSUER_URL=https://froggy.kinde.com
 KINDE_SITE_URL=https://streamable-ebon.vercel.app/
 KINDE_POST_LOGOUT_REDIRECT_URL=https://streamable-ebon.vercel.app/
-KINDE_POST_LOGIN_REDIRECT_URL=https://streamable-ebon.vercel.app/
+KINDE_POST_LOGIN_REDIRECT_URL=https://streamable-ebon.vercel.app/m/api/auth/kinde_callback
+
+
