--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 KINDE_CLIENT_ID=29799bda61a6415bb8ccd255f04de077
 KINDE_CLIENT_SECRET=G1jmWoCQQqpoMnkUO305XOSIb5vO1tuZP3fhXFCk4HG1GtAQtA7Pa
 KINDE_ISSUER_URL=https://froggy.kinde.com
-KINDE_SITE_URL=https://streamable-ebon.vercel.app/
-KINDE_POST_LOGOUT_REDIRECT_URL=https://streamable-ebon.vercel.app/
-KINDE_POST_LOGIN_REDIRECT_URL=https://streamable-ebon.vercel.app/
+KINDE_SITE_URL=https://www.ngrim.xyz/
+KINDE_POST_LOGOUT_REDIRECT_URL=https://www.ngrim.xyz/
+KINDE_POST_LOGIN_REDIRECT_URL=https://www.ngrim.xyz/
 
 
